--- a/gb/23/1/14/n13906700.md
+++ b/gb/23/1/14/n13906700.md
@@ -2,17 +2,14 @@
 <table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/1992513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/1992513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
 <tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/1992513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>常年遭高强度管控 疫苗受害人：快被逼死了</h2>
-<img width="600" src="https://i.epochtimes.com/assets/uploads/2023/01/id13906753-FotoJet-6-600x400.jpg" />///image2=```diff
-- 上海疫苗受害家庭华秀珍为女儿维权被判刑再遭剥夺养老金，使其家庭生活陷入困境。（受访者提供／大纪元合成）
-```
-<h6>上海疫苗受害家庭华秀珍为女儿维权被判刑再遭剥夺养老金，使其家庭生活陷入困境。（受访者提供／大纪元合成）
-</h6>
+<img width="600" src="https://i.epochtimes.com/assets/uploads/2023/01/id13906753-FotoJet-6-600x400.jpg" />
+<h6>上海疫苗受害家庭华秀珍为女儿维权被判刑再遭剥夺养老金，使其家庭生活陷入困境。（受访者提供／大纪元合成）</h6>
 <hr>
 	<p>【大纪元2023年01月14日讯】（大纪元记者李熙采访报导）上海市民谭华因接种狂犬病疫苗导致脑病癫痫已经九年了，她和母亲华秀珍因维权遭到当局长期打压维稳，华秀珍的养老金被剥夺。谭华表示，“我家已经到了无法生存的境地，看病吃饭都成问题了，常年要饭，快被逼死了！”</p>
 <p>谭华，原来是复旦大学硕士，34岁那年被狗咬了一口，在2014年接种试点狂犬病疫苗，中共疾控中心违法出具两次无效的疫苗异常反应诊断（即身体出现异常反应与打疫苗无关）。为了让疾控中心纠正错误，母女俩走上了维权路。</p>
 <h2>谭华母女被阳性维稳人员感染新冠病毒</h2>
 <p>谭华13日对大纪元记者表示，“去年底中共举办江泽民追悼会与毛泽东纪念日期间（2022年12月20至26日），我和母亲被控制家中，地方政府雇用12名阳性（染疫）保安上岗监控，这些人在楼道和家门口咳嗽、吃药、吃饭、睡觉。把新冠病毒（中共病毒）传染给我们和周围的邻居，在楼群组里引起很大的反弹。”</p>
-<div class="video_fit_container"><a width="635" b="356" class="video_frame" data2-src=""></a><a href="https://d2p9r31ubb8t81.cloudfront.net/T0bzBCWeSUMq"><img width="600" src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.ganjingworld.com/embed/1fi7kqq72ii2vEVdKxCUt8iBD1al1c" allowfullscreen></a>
+<div class="video_fit_container"><a width="635" b="356" class="video_frame" data2-src=""></a><a href="https://d3d2r098q79b5l.cloudfront.net/S9dzBCWeSUMu"><img width="600" src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.ganjingworld.com/embed/1fi7kqq72ii2vEVdKxCUt8iBD1al1c" allowfullscreen></a>
 </div>
 <p>谭华母女被感染了病毒，发高烧39度，在监控期间不允许去看病，她们只能向邻居和朋友求药， 华秀珍染疫高烧后出现高血压症状，等到撤岗后出门看病已经心肌缺血了。<strong><br />
 </strong></p>
@@ -23,7 +20,7 @@
 <p>“医生给我诊断只写病史‘无诱因出现咳嗽、痰、胸痛’，按急性支气管炎治，医院的药都空了，医生开来开去没有药，最后搞点甘草止咳糖浆。我问医生有没有布洛芬，回答没有。这个医生写病历都是统一格式的，诱因是新冠谁不知道？故意不写。”</p>
 <p>2023年1月6日，谭华母女去长海医院就诊，一开始去急诊科，人山人海全是吸氧吊水老人，走廊过道、楼梯间都是人。“这回诊断写‘胸痛，新型冠状病毒感染’，这个算不算国家承认的？配了点扩张支气管的药。长海医院也没有布洛芬。”</p>
 <p>“现在上海医院看病人数用张文宏（医生）的话就是到了脖颈。医院急诊满地都是人，全部是老年人，吸氧吊水。你看新华医院的现状，急诊楼里过道走廊也都躺满病人，以老年人为主。布洛芬一药难求。”她说。</p>
-<div class="video_fit_container"><a width="635" b="356" class="video_frame" data2-src=""></a><a href="https://d2p9r31ubb8t81.cloudfront.net/T0bzBCWeSUMq"><img width="600" src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.ganjingworld.com/embed/1fi7defthni6MSFBBPFGhrEOL1o91c" allowfullscreen></a>
+<div class="video_fit_container"><a width="635" b="356" class="video_frame" data2-src=""></a><a href="https://d3d2r098q79b5l.cloudfront.net/S9dzBCWeSUMu"><img width="600" src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.ganjingworld.com/embed/1fi7defthni6MSFBBPFGhrEOL1o91c" allowfullscreen></a>
 <h2><strong>维权九年 </strong><strong>一半时间在监狱</strong></h2>
 <p>2018年华秀珍在北京上访，被以寻衅滋事判处有期徒刑一年两个月，并剥夺了她一切退休待遇。让她母子俩生活陷入困境。</p>
 <p>谭华说，“有一次，我在路上偶遇了上海新任市委书记陈吉宁，当面诉说了疫苗受害、被违法判刑剥夺养老金等事，被警察以煽动颠覆勾结境外势力为由扣押24小时，被反复盘问是不是有境外势力。现在感觉在国内维权和发声如履薄冰。”</p>
@@ -31,37 +28,33 @@
 <p>在过去九年时间里，谭华有一半时间是在看守所和非法拘禁中度过。为了不让她们上访维权，有关部门多次把她母女俩关在长兴岛皇豪大酒店8号楼内不让出门，最长一次关了四百多天，派二、三十个保安和工作人员日夜不离的看着，连上厕所、洗澡、睡觉都要看着，不听话反抗，就绑起来殴打。</p>
 <p>责任编辑：林琮文</p>
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/920513/djy/blob/master/gb/11/6/12/n3284139.md#1">沉粹典丽 风骨逆劲──唐初四大书法家之 虞世南</a></li>
-<li><a href="https://github.com/920513/djy/blob/master/gb/11/10/7/n3394783.md#1">后世圭臬 唐楷第一书家欧阳询</a></li>
-<li><a href="https://github.com/920513/djy/blob/master/gb/16/7/2/n8059920.md#1">【千古英雄人物】唐太宗(22) 墨海椽笔</a></li>
-<li><a href="https://github.com/920513/djy/blob/master/gb/17/5/12/n9133922.md#1">【书法漫谈】书法家的对话：放松与放纵</a></li>
-<li><a href="https://github.com/920513/djy/blob/master/gb/17/5/20/n9163925.md#1">唐代书法漫谈（1）</a></li>
-<li><a href="https://github.com/920513/djy/blob/master/gb/17/5/20/n9163955.md#1">唐代书法漫谈（2）</a></li>
-<li><a href="https://github.com/920513/djy/blob/master/gb/17/5/20/n9163956.md#1">唐代书法漫谈（3）</a></li>
-<li><a href="https://github.com/920513/djy/blob/master/gb/19/1/16/n10979954.md#1">仁心执法 让死刑判起来更难的唐太宗</a></li>
-<li><a href="https://github.com/920513/djy/blob/master/gb/22/1/16/n13507994.md#1">【书法漫谈】中国书法的神性特点</a></li>
-<li><a href="https://github.com/920513/djy/blob/master/gb/23/6/29/n14025211.md#1">宏硕壮阔 最具帝王气象的唐太宗诗歌</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/4/13/n14481653.md#1">湖北维权人士案件庭审 莫名被增加两项罪名</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/14/n14531122.md#1">要求调查办假案法官 访民被抓 亲属遭株连</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/8/31/n14584722.md#1">湖北访民夫妻被以虚构罪名判入狱 生命垂危</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/22/n14621384.md#1">湖北访民尹登珍狱中病情恶化 家属吁紧急救援</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank">印度媒体报道东方</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/2/11/n10134371.md#1" target="_blank">中共反对提倡“礼义廉耻”的新生活运动</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/8/2/n10610921.md#1" target="_blank">8岁自闭儿奇迹“开心锁” 变身最快乐男孩</a></li><hr>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank">揭开活摘器官黑幕</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/5/15/n11261433.md#1" target="_blank">王维洛：孙越崎，学生领袖、煤油大王与三峡工程反对派的重要领军人物</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/5/8/n11243139.md#1" target="_blank">治病与救人 警察为近八旬大夫“站岗”</a></li><hr>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/2/18/n14439721.md#1">【古道人生】年轻的他为何娶了个缺牙秃发老婆？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/8/3/n14566136.md#1">秋老虎立秋到 秋天养生最重这一道</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/8/2/n14565964.md#1">【未解之谜】北京暴雨洪灾之谜</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/29/n14563211.md#1">【品读宋词】闲情几许？藏在横塘的恋歌</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/15/12/1/n4585332.md#1">至刚至大唯正气 百邪不侵道长存</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/8/7/n14569561.md#1">【直播】皮戈特主持国务院简报会（8/7）</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/8/6/n14568676.md#1">【未解之谜】释永信跌下神坛的惊人真相 他的结局两千年前就定了</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/8/7/n14569364.md#1">【佳音时刻】释永信突落马 其靠山是谁？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/8/5/n14567778.md#1">这些职业易学又高薪 大公司为何招不到人？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/8/5/n14567898.md#1">2美元披萨太抢手 必胜客宣布优惠延至8月</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/8/5/n14567962.md#1">赵露思控诉经纪公司 杨幂15年前的帖文亦火爆</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/8/4/n14567194.md#1">回应“接受不了生女儿” 方力申自曝险家变</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/8/5/n14567985.md#1">不满阿汤哥拿奖 摩尔为患病前夫布鲁斯发声</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/8/6/n14568803.md#1">与赵露思帖文共鸣 张芷溪批“银河酷娱”毁约</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/8/4/n14567094.md#1">《西游记》如来佛扮演者朱龙广病逝 终年86岁</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/8/5/n14567489.md#1">注意！如果你的手有这种症状 你可能罹患肺癌</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/8/6/n14568293.md#1">使用微波炉最常见的6种错误 你有吗？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/8/5/n14567755.md#1">大肚腩？容易年纪轻轻就失智</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/8/7/n14569125.md#1">你应该在花园里种植芥菜 一举数得</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/18/n14638002.md#1">高人点化孙叔敖：谨记三条铁律，就能获得善终</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/4/n14608984.md#1">【古道人生】许多人都知道天诛 不知道地灭是怎回事</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/15/n14636582.md#1">青年建筑师创业靠信任 在纽约筑起台湾的家</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/31/n14426731.md#1">【品读唐诗】空山新雨的禅境</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/11/4/25/n3238815.md#1">安贫乐道——《后汉书》中的韦彪与杨震</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640544.md#1">【佳音时刻】胡耀邦纪念会 红二代分裂成焦点</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640558.md#1">【纪元焦点】28点计划出炉 俄乌现和平曙光？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/22/n14640667.md#1">【车评】展现Gazoo精神 2025 Toyota Corolla GR Premium Plus</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/20/n14639642.md#1">SU7争议继续发酵 小米市值蒸发逾5300亿港元</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/18/n14638607.md#1">分析：农民工若大规模返贫 或将揭竿而起</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14639193.md#1">分析：建立稀土供应链 西方占据两大优势</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14639252.md#1">陆女星韩雪打破高冷形象 直播卖12.9元棉拖鞋</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14639275.md#1">赵丽颖带儿子出门再被偷拍 工作室紧急发声</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/18/n14638556.md#1">《鬼灭之刃》票房超千亿日圆 创日本影史纪录</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14638997.md#1">《魔法坏女巫2》褒贬不一 烂番茄评价出炉</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/20/n14639948.md#1">港星郑则仕曝近况 回应身材暴瘦与去世传闻</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/20/n14639533.md#1">为何飞机不直接飞到巡航高度 而是分段爬升？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14639278.md#1">想要逆龄？这些抗老好物帮你保养更有效</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640625.md#1">“黑色星期五”年度优惠周11月20日提前开跑</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640269.md#1">心理学家：判断伴侣是否真正契合的两个迹象</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640311.md#1">喝茶有禁忌？ 美国医生说这样喝会伤身</a></li>
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/23/1/14/n13906700.htm">常年遭高强度管控 疫苗受害人：快被逼死了</a></p><hr>
 <strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/23/1/14/n13906700.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
